<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bozorgzad.ali.introducingtvus.ActivityAppBarBackOrCloseButton">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAboutUs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/about_us_bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/about_us_padding_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/about_us_text_color"
                android:textSize="@dimen/about_us_app_name_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_us_ll_version_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_us_app_version"
                    android:textColor="@color/about_us_text_color"
                    android:textSize="@dimen/about_us_ll_version_text_size" />

                <TextView
                    android:id="@+id/txtAppVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2.17.13"
                    android:textColor="@color/about_us_text_color"
                    android:textSize="@dimen/about_us_ll_version_text_size" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_us_img_logo_margin_top"
                app:srcCompat="@drawable/ic_logo_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_us_tvu_name_margin_top"
                android:text="@string/about_us_technical_and_vocational_university"
                android:textColor="@color/about_us_text_color"
                android:textSize="@dimen/about_us_tvu_name_text_size" />

            <TextView
                android:id="@+id/txtSiteAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_us_tvu_site_address_margin_top"
                android:padding="@dimen/about_us_tvu_site_address_padding_top"
                android:text="@string/about_us_tvu_site_address"
                android:textColor="@color/about_us_text_color"
                android:textSize="@dimen/about_us_tvu_site_address_text_size"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_us_ll_developer_margin_top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_developer_name_title"
                        android:textColor="@color/about_us_text_color"
                        android:textSize="@dimen/about_us_developer_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_developer_name"
                        android:textColor="@color/about_us_text_color"
                        android:textSize="@dimen/about_us_developer_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/about_us_email_developer_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_developer_email_title"
                        android:textColor="@color/about_us_text_color"
                        android:textSize="@dimen/about_us_developer_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_developer_email"
                        android:textColor="@color/about_us_text_color"
                        android:textSize="@dimen/about_us_developer_text_size" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

