<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/sign_in_padding_horizontal"
        android:paddingStart="@dimen/sign_in_padding_horizontal"
        android:paddingTop="@dimen/sign_in_padding_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_app_name_margin_top"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/sign_in_app_name_text_color"
            android:textSize="@dimen/sign_in_app_name_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/sign_in_google_buttons_parent_margin_top"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSignInWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_sign_in_with_google"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/sign_in_google_buttons_padding_vertical"
                android:paddingEnd="@dimen/sign_in_google_buttons_padding_horizontal"
                android:paddingStart="@dimen/sign_in_google_buttons_padding_horizontal"
                android:paddingTop="@dimen/sign_in_google_buttons_padding_vertical">

                <TextView
                    android:id="@+id/txtGoogleIcon"
                    android:layout_width="@dimen/sign_in_google_buttons_icon_width_height"
                    android:layout_height="@dimen/sign_in_google_buttons_icon_width_height"
                    android:gravity="center"
                    android:text="@string/icon_google"
                    android:textColor="@color/sign_in_google_buttons_icon_color"
                    android:textSize="@dimen/sign_in_google_buttons_icon_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="@dimen/sign_in_google_buttons_text_padding_end"
                    android:text="@string/sign_in_google_sign_in_with_google_account_text"
                    android:textColor="@color/sign_in_google_buttons_text_color"
                    android:textSize="@dimen/sign_in_google_buttons_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRegisterWithEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_google_btn_register_padding_top"
                android:background="@drawable/ripple_register_with_email"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/sign_in_google_buttons_padding_vertical"
                android:paddingEnd="@dimen/sign_in_google_buttons_padding_horizontal"
                android:paddingStart="@dimen/sign_in_google_buttons_padding_horizontal"
                android:paddingTop="@dimen/sign_in_google_buttons_padding_vertical">

                <TextView
                    android:id="@+id/txtEmailIcon"
                    android:layout_width="@dimen/sign_in_google_buttons_icon_width_height"
                    android:layout_height="@dimen/sign_in_google_buttons_icon_width_height"
                    android:gravity="center"
                    android:text="@string/icon_envelop"
                    android:textColor="@color/sign_in_google_buttons_icon_color"
                    android:textSize="@dimen/sign_in_google_buttons_icon_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="@dimen/sign_in_google_buttons_text_padding_end"
                    android:text="@string/sign_in_google_register_with_email_text"
                    android:textColor="@color/sign_in_google_buttons_text_color"
                    android:textSize="@dimen/sign_in_google_buttons_text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_google_txt_sign_in_margin_top"
                android:gravity="center"
                android:paddingBottom="@dimen/sign_in_google_txt_sign_in_padding_vertical"
                android:paddingTop="@dimen/sign_in_google_txt_sign_in_padding_vertical"
                android:text="@string/sign_in_google_have_an_account"
                android:textColor="@color/sign_in_google_txt_sign_in_text_color"
                android:textSize="@dimen/sign_in_google_txt_sign_in_text_size" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>