<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="@dimen/uni_reviews_dialog_report_title_elevation"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/uni_reviews_dialog_report_title_padding_vertically"
            android:paddingEnd="@dimen/uni_reviews_dialog_report_title_padding_horizontally"
            android:paddingStart="@dimen/uni_reviews_dialog_report_title_padding_horizontally"
            android:paddingTop="@dimen/uni_reviews_dialog_report_title_padding_vertically">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uni_reviews_report_dialog_title"
                android:textColor="@color/uni_reviews_dialog_report_txt_title_text_color"
                android:textSize="@dimen/uni_reviews_dialog_report_txt_title_text_size"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/uni_reviews_bg_color"
            android:orientation="vertical"
            android:paddingBottom="@dimen/uni_reviews_dialog_report_body_padding_bottom"
            android:paddingEnd="@dimen/uni_reviews_dialog_report_body_padding_horizontally"
            android:paddingStart="@dimen/uni_reviews_dialog_report_body_padding_horizontally"
            android:paddingTop="@dimen/uni_reviews_dialog_report_body_padding_top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uni_reviews_report_dialog_question_why"
                android:textColor="@color/uni_reviews_dialog_report_txt_ask_why_report_text_color"
                android:textSize="@dimen/uni_reviews_dialog_report_txt_ask_why_report_text_size" />

            <RadioGroup
                android:id="@+id/rgReportReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/uni_reviews_dialog_report_radio_group_margin_top"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rdbInappropriateContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="Inappropriate Content"
                    android:text="@string/uni_reviews_report_dialog_rdb_inappropriate_content"
                    android:textColor="@color/uni_reviews_dialog_report_buttons_text_color"
                    android:textSize="@dimen/uni_reviews_dialog_report_radio_buttons_text_size" />

                <RadioButton
                    android:id="@+id/rdbAdvertising"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="Advertising"
                    android:text="@string/uni_reviews_report_dialog_rdb_advertising"
                    android:textColor="@color/uni_reviews_dialog_report_buttons_text_color"
                    android:textSize="@dimen/uni_reviews_dialog_report_radio_buttons_text_size" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/uni_reviews_dialog_report_buttons_margin_top"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCancelReportReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_new_review_btn"
                    android:gravity="center_horizontal"
                    android:minWidth="@dimen/uni_reviews_dialog_report_buttons_min_width"
                    android:padding="@dimen/uni_reviews_dialog_report_buttons_padding"
                    android:text="@string/uni_reviews_new_review_cancel"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSubmitReportReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/uni_reviews_dialog_report_btn_submit_margin_start"
                    android:background="@drawable/ripple_new_review_btn"
                    android:gravity="center_horizontal"
                    android:minWidth="@dimen/uni_reviews_dialog_report_buttons_min_width"
                    android:padding="@dimen/uni_reviews_dialog_report_buttons_padding"
                    android:text="@string/uni_reviews_new_review_submit"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>